# math-tasks-cpp

./: .gitignore  CMakeLists.txt  README.md  ДЛЯ_ПРЕПОДАВАТЕЛЯ.md  ИНСТРУКЦИЯ_ДЛЯ_ПРЕПОДАВАТЕЛЯ.txt  ИНСТРУКЦИЯ_ПЕРЕНОС_НА_НОУТ.txt  ПРОВЕРКА_ГОТОВНОСТИ.txt  запустить_все.bat  собрать.bat
task1_inequality/: inequality.cpp  inequality.h  main.cpp  test_inequality.cpp
task2_cone/: cone.cpp  cone.h  main.cpp  test_cone.cpp
task3_polynomial/: main.cpp  polynomial.cpp  polynomial.h  test_polynomial.cpp
task4_inequality_abc/: inequality_abc.cpp  inequality_abc.h  main.cpp  test_inequality_abc.cpp
task5_complex_poly/: complex_polynomial.cpp  complex_polynomial.h  main.cpp  test_complex_polynomial.cpp
